# ESET-Internship

./: .gitignore  README.md
Client/: CMakeLists.txt  proto.cmake
Client/backend/: CMakeLists.txt  backend.cpp  backend.h  client_app_install.xml
Client/backend/src/client_client/manual_update/: ManualUpdateClient.h
Client/backend/src/client_client/manual_update/Linux/: ManualUpdateClient.cpp
Client/backend/src/client_client/manual_update/Windows/: ManualUpdateClient.cpp
Client/backend/src/client_server/admin_instructions/: AdminInstructionsImpl.h
Client/backend/src/client_server/admin_instructions/Linux/: AdminInstructionsImpl.cpp
Client/backend/src/client_server/admin_instructions/Windows/: AdminInstructionsImpl.cpp
Client/backend/src/client_server/data_transmission/: AppInfo.h  DataInserterClientImpl.cpp  DataInserterClientImpl.h  DeviceInfo.h
Client/backend/src/client_server/data_transmission/Linux/: AppInfo.cpp  DeviceInfo.cpp
Client/backend/src/client_server/data_transmission/Windows/: AppInfo.cpp  DeviceInfo.cpp
Client/backend/src/client_server/update_service/: UpdateServiceImpl.cpp  UpdateServiceImpl.h
Client/backend/src/include/: UpdateConstants.h
Client/gui/: package-lock.json  package.json  renameInstaller.js  run_app.sh
Client/gui/src/: index.html  index.js  preload.js  renderer.js  styles.css
Installer/debian/: ESET_backend.service  README.md  build_package.sh  postinst.sh
Server/: CMakeLists.txt  ESETServerSide.cpp  ESETServerSide.h  proto.cmake
Server/assets/: dashboard.html  login.html
Server/assets/css/: dashboard.css  default.css  login.css  main.css
Server/assets/img/favicon/dashboard/: browserconfig.xml
Server/assets/js/: dashboard.js  devices.js  login.js  restart.js  shutdown.js  update.js
Server/service/: start_server.sh
Server/src/entity/: AdminClient.cpp  ClientDataProcessingImpl.cpp  DatabaseControls.cpp  DatabaseHandler.cpp  DatabaseSingleton.cpp  DeviceHandler.cpp  InstallerServiceImpl.cpp  IpAddress.cpp  JsonLoader.cpp  LoginDb.cpp  LoginRequestBody.cpp  MongoHandler.cpp  RequestHandler.cpp  RequestHandlerFactory.cpp  RestartHandler.cpp  ServerHttp.cpp  ShutdownHandler.cpp  UpdateHandler.cpp
Server/src/include/: AdminClient.h  ClientDataProcessingImpl.h  DatabaseControls.h  DatabaseHandler.h  DatabaseSingleton.h  DeviceHandler.h  InstallerServiceImpl.h  IpAddress.h  JsonLoader.h  LoginDb.h  LoginRequestBody.h  MongoHandler.h  RequestHandler.h  RequestHandlerFactory.h  RestartHandler.h  ServerHttp.h  ShutdownHandler.h  UpdateHandler.h
Shared/proto/: client_data_transmission.proto  gui_communication.proto  manual_update_service.proto  os_type.proto  server_instructions.proto  service_call_result.proto
